# dimensional-cpp

./: .gitignore  README.md
c/src/: .clang-tidy  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  dimensional.cpp  test.cpp  todo.cpp
c/src/tests/: helper.hh
c/src/tests/right/: test_array_access.cpp  test_basic_math.cpp  test_cast_right.cpp  test_complex_expressions.cpp  test_compound_units.cpp  test_correct_member_init.cpp  test_division.cpp  test_drop_unit_member_ccast_style.cpp  test_explicit_cast.cpp  test_function_right.cpp  test_many_divisions.cpp  test_parenthesized.cpp  test_practical_trip.cpp  test_return_type.cpp  test_templates.cpp  test_unit_cancellation.cpp
c/src/tests/wrong/: test_bad_vector_access.cpp  test_boolean.cpp  test_cast.cpp  test_cast_to_wrong.cpp  test_complex.cpp  test_conditional.cpp  test_drop_unit_member.cpp  test_drop_unit_member_ccast_style.cpp  test_drop_units.cpp  test_edge.cpp  test_function.cpp  test_incorrect_access.cpp  test_incorrect_field_desg_init.cpp  test_incorrect_field_init.cpp  test_invalid_operations.cpp  test_invalid_unit.cpp  test_no_unit_member.cpp  test_operator_misuse.cpp  test_paren_invalid.cpp  test_return_type.cpp  test_template_errors.cpp  test_unitless_init.cpp  test_wrong_unit_member.cpp  test_wrong_units.cpp
python/: run_tests.py
